<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">BookInHand Paid</string>
    <string name="app_name_free">BookInHand Free</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="skip_login">Skip</string>
    <string name="welcome_intro_screen">Welcome in Book in Hand.   \n \n Get all the informations you want before getting a book.</string>
    <string name="flash">Flash</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="remove_from_favourites">Remove from Favourites</string>
    <string name="transition_string">shared_book</string>
    <string name="start_research">Start the research by hitting the take photo button or the search book one to start. We will do the rest for you.</string>
    <string name="preview">Preview</string>
    <string name="no_preview">Sorry, preview is currently not available</string>
    <string name="share">Share</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="more_info">More info</string>
    <string name="pages">Pages</string>
    <string name="search_book">Search book</string>
    <string name="buy">Buy</string>
    <string name="title_activity_bottom_nav">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="favourites">Favourites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="change_layout">Change layout</string>
    <string name="more_from_author">More from the same author</string>
    <string name="more">More</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="appwidget_text">Scan Title</string>
    <string name="border">border</string>
    <string name="full">full</string>
    <string name="add_widget">Add widget</string>
    <string name="bookmark_full_path">
          M17,3A2,2 0 0,1 19,5V21L12,18L5,21V5C5,3.89 5.9,3 7,3H17M11,14L17.25,7.76L15.84,6.34L11,11.18L8.41,8.59L7,10L11,14Z
    </string>
    <string name="bookmark_border_path">
       M17,18V5H7V18L12,15.82L17,18M17,3A2,2 0 0,1 19,5V21L12,18L5,21V5C5,3.89 5.9,3 7,3H17M11,7H13V9H15V11H13V13H11V11H9V9H11V7Z
    </string>
    <string name="admob_app_id">ca-app-pub-7591558785282957~2079968391</string>
    <string name="admob_interstitial_id">ca-app-pub-7591558785282957/1561093645</string>
    <string name="nyt_api_key">0a8904327c624e03b1dbbb713449e4ac</string>
    <string name="favourite_books">Favourite Books</string>
    <string name="fav_list">Favourites List</string>
    <string name="connection_line_mask_hidden">M26,159 L26,159 L32,159 L32,159 Z</string>
    <string name="connection_line_mask_shown">M26,67 L26,159 L32,159 L32,67 Z</string>
    <string name="phone_button">M24,206.5 C24,206.5 27.6392462,206.449997 28,206.449997 C28.3607538,206.449997 32,206.5 32,206.5</string>
    <string name="phone_button_frown">M23.6061137,207.020699 C23.6061137,207.020699 26.2397148,206 28.494994,206 C30.7502732,206 32.753258,207.020699 32.753258,207.020699</string>
    <string name="sort_path">M6,13H18V11H6M3,6V8H21V6M10,18H14V16H10V18Z</string>
    <string name="sort">Sort</string>
    <string name="history_pref_name">sugg_history</string>
    <string name="sett_version_summary">Version Name + PRO / FREE</string>
    <string name="sett_version_title">BookInHand</string>
    <string name="sett_rate_title">Give me a five!</string>
    <string name="sett_rate_summary">Rate the app on the Store</string>
    <string name="sett_library_title">Open Source Licenses</string>
    <string name="sett_library_summary">Used Libraries</string>
    <string name="sett_account_title">Log In</string>
    <string name="sett_account_key">account</string>
    <string name="sett_rate_key">rate</string>
    <string name="sett_library_key">library</string>
    <string name="sett_version_key">version</string>
    <string name="hard_cover_fiction">Hard Cover Fiction</string>
    <string name="paperback_non_fiction">Paperback Non-Fiction</string>
    <string name="hard_cover_non_fiction">Hard Cover Non-Fiction</string>
    <string name="e_book_fiction">E-Book Fiction</string>
    <string name="add_favs">No Favourites yet!</string>
    <string name="subtitle">Found something interesting? Add to your favourites!  Swipe to refresh.</string>
    <string name="no_fav_to_display">No favourites to display</string>
    <string name="sett_beta_summary">Join beta testing and get a preview of new coming features.</string>
    <string name="sett_beta_title">Join beta testing</string>
    <string name="sett_beta_key">join_beta</string>
    <string name="sett_upgr_key">upgrade</string>
    <string name="sett_upgr_sum">Upgrade to Paid version</string>
    <string name="sett_upgr_title">Buy the app</string>
    <string name="buy_on_amazon">Buy on Amazon</string>
    <string name="sett_about_key">about</string>
    <string name="sett_about_summary">About Jonathan Imperato</string>
    <string name="sett_about_title">About me</string>
    <string name="add_to_fav_img">add to fav image</string>
    <string name="heart_image">Heart image</string>
    <string name="book_cover">Book cover</string>
    <string name="reviewer_profile_picture">reviewer profile picture</string>
    <string name="camera_image">camera image</string>
    <string name="flash_image_btn">flash image button</string>
    <string name="no_connection_image">No connection image</string>
    <string name="thumbnail">thumbnail</string>
    <string name="reviews">Reviews</string>
    <string name="option_menu">Option Menu</string>
    <string name="rating">Rating </string>
    <string name="not_applicable">N/A</string>
    <string name="more_on">...</string>
    <string name="comma">,</string>
    <string name="no_results_found">Sorry, no results found.</string>
    <string name="error_while_fetching_Data">Error while fetching data :(</string>
    <string name="join_beta">Join beta not yet available.</string>
    <string name="author_info">Jonathan Imperato\'s Info aren\'t currently available.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="sharing">Sharing</string>
    <string name="sharing_via">Share via</string>
    <string name="couldnt_shre">Sorry, could not share</string>
    <string name="success_signedout">Successfully signed out.</string>
    <string name="cancel">Cancel</string>
    <string name="book_added_fav">has been added to favourite</string>
    <string name="book_removed_fav">has been removed from favourites</string>
    <string name="already_fav">is already a favourite</string>
    <string name="paid_feature">This feature can be used only from paid users. Would you like to get the paid version of the app? It includes many additional features.</string>
</resources>