<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="ACCOUNT">

        <Preference
            android:key="@string/sett_account_key"
            android:title="@string/sett_account_title" />
        <Preference
            android:key="@string/sett_beta_key"
            android:summary="@string/sett_beta_summary"
            android:title="@string/sett_beta_title" />
        <Preference
            android:key="@string/sett_upgr_key"
            android:summary="@string/sett_upgr_sum"
            android:title="@string/sett_upgr_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="LEGAL">

        <Preference
            android:key="@string/sett_library_key"
            android:summary="@string/sett_library_summary"
            android:title="@string/sett_library_title" />
    </PreferenceCategory>


    <PreferenceCategory android:title="APP">
        <!--     <Preference
                 android:key="feedback"
                 android:summary="Provide a short feedback about BookInHand"
                 android:title="Feedback" />
     -->
        <Preference
            android:key="@string/sett_rate_key"
            android:summary="@string/sett_rate_summary"
            android:title="@string/sett_rate_title" />
        <Preference
            android:key="@string/sett_version_key"
            android:summary="@string/sett_version_summary"
            android:title="@string/sett_version_title" />
    </PreferenceCategory>
    <!--
    <CheckBoxPreference
        android:defaultValue="@string/default_checkbox_preference"
        android:key="checkbox_preference"
        android:title="@string/title_checkbox_preference" />

    <EditTextPreference
        android:dependency="checkbox_preference"
        android:dialogTitle="@string/dialog_title_edittext_preference"
        android:key="edittext_preference"
        android:summary="@string/summary_edittext_preference"
        android:title="@string/title_edittext_preference" />

</PreferenceCategory>

<PreferenceCategory android:title="@string/title_second_section">

    <ListPreference
        android:dialogTitle="@string/dialog_title_list_preference"
        android:entries="@array/entries_list_preference"
        android:entryValues="@array/entryvalues_list_preference"
        android:key="list_preference"
        android:title="@string/title_list_preference" />

    <Preference android:title="@string/title_intent_preference">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://codepath.com/" />
    </Preference>

</PreferenceCategory>
-->
</PreferenceScreen>