<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:padding="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="@dimen/poster_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            app:cardUseCompatPadding="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height"
                android:transitionName="@string/transition_string"
                android:adjustViewBounds="true"
                android:contentDescription="@string/thumbnail"
                android:foreground="?selectableItemBackground"
                android:scaleType="centerCrop"
                tools:targetApi="lollipop" />

            <ImageButton
                android:id="@+id/more_fav"
                style="?android:attr/actionOverflowButtonStyle"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/option_menu"
                android:tint="#fff" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card"
            tools:text="Titolo" />

        <TextView
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="Autore" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:gravity="start"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="Valutazione 5.5" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
