<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BookDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/dtoolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Home"
            app:titleTextColor="#fff">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:paddingBottom="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img"
                android:layout_width="120dp"
                android:layout_height="190dp"
                android:layout_margin="16dp"
                android:transitionName="@string/transition_string"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/addToFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:onClick="onAddBookmark"
                android:src="@drawable/ic_bookmark_border_black_24dp"
                android:tint="@color/colorAccent"
                android:tooltipText="@string/add_to_favourite"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:maxWidth="200dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/img"
                app:layout_constraintRight_toRightOf="@id/addToFav"
                tools:text="TEST" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="16sp"
                android:maxWidth="200dp"
                app:layout_constraintLeft_toLeftOf="@id/book_title"
                app:layout_constraintTop_toBottomOf="@id/book_title"
                tools:text="Author" />

            <TextView
                android:id="@+id/pubblish_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:maxWidth="200dp"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@id/author"
                app:layout_constraintTop_toBottomOf="@id/author"
                tools:text="2013-05-24" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/previewBtn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="onPreviewClick"
                android:text="@string/preview"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="#9E9E9E"
                app:layout_constraintTop_toBottomOf="@id/previewBtn" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/addToFav2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:drawableTint="#000"
                android:drawableTop="@drawable/ic_bookmark_border_black_24dp"
                android:foreground="?selectableItemBackground"
                android:onClick="onAddBookmark"
                android:text="@string/add_to_favourite"
                android:textColor="#000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:clickable="true"
                android:drawableTint="#000"
                android:drawableTop="@drawable/ic_share_black_24dp"
                android:foreground="?selectableItemBackground"
                android:onClick="onShare"
                android:text="@string/share"
                android:textColor="#000"
                app:layout_constraintLeft_toRightOf="@id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="#9E9E9E"
                app:layout_constraintTop_toBottomOf="@id/share" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                tools:layout_height="58dp"
                tools:listitem="@layout/category_item" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="16dp"
                android:background="#9E9E9E"
                app:layout_constraintTop_toBottomOf="@id/categories" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/divider3"
                app:layout_constraintRight_toRightOf="@id/divider3"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                tools:text="@string/lorem_ipsum" />

            <Button
                android:id="@+id/moreBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_info"
                android:onClick="onMoreInfo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>